--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,35 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
+    
+    <link rel="stylesheet" type="text/css" href="https://openturf.dev/retaildemo/dist/Chatroom.css" />
+    <link rel="stylesheet" type="text/css" href="https://openturf.dev/retaildemo/index.css" />
+    <title>Retail</title>
 
-    <title>plugin-content</title>
+    <!-- chatbot link-->
+    <link rel="stylesheet" href="https://npm-scalableminds.s3.eu-central-1.amazonaws.com/@scalableminds/chatroom@master/dist/Chatroom.css" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <div class="chatcontainer" id="chatContent">
+      <div class="chat-container"></div>
+    </div>
+    <script src="https://npm-scalableminds.s3.eu-central-1.amazonaws.com/@scalableminds/chatroom@master/dist/Chatroom.js" ></script>
+    <!-- <script src="https://openturf.dev/retaildemo/dist/Chatroom.js"></script> -->
+    <script type="text/javascript">
+        window.chatroom = new window.Chatroom({
+        host: "https://openturf.dev/retaildemo",
+        title: "Retail Demo",
+        container: document.querySelector(".chat-container"),
+        welcomeMessage: "Hallo! How can I help you?"
+      });
+      window.chatroom.openChat();
+    </script>
   </body>
 </html>
