--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,29 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <title>Agora</title>
-
+    <link rel="stylesheet" href="https://npm-scalableminds.s3.eu-central-1.amazonaws.com/@scalableminds/chatroom@master/dist/Chatroom.css" />
   </head>
   <body>
     <div id="root"></div>
+    <div class="chatcontainer" id="chat-container">
+      <div class="chat-container"></div>
+    </div>
+    <script src="https://npm-scalableminds.s3.eu-central-1.amazonaws.com/@scalableminds/chatroom@master/dist/Chatroom.js"/></script>
+    <script type="text/javascript">
+      window.chatroom = new window.Chatroom({
+        title: "Retail Demo",
+        container: document.querySelector(".chat-container"),
+        welcomeMessage: "Hello! How can I help you?",
+        host: "https://openturf.dev/retaildemo"
+        // speechRecognition: "en-US",
+        // voiceLang: "en-US"
+      });
+      window.chatroom.openChat();
+      </script>
   </body>
 </html>
